Eclipse 4.20 (M3) JDT Patch for Groovy-Eclipse: JDT commit 8776058
#1233 #1234